--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 <head>
 	<title>Transformer</title>
 	<link rel="stylesheet" type="text/css" href="Transformer.css">
+	<link rel="stylesheet" type="text/css" href="ticket.css">
 </head>
 <body>
 
-<div id="timing">
+<!-- <div id="timing">
 	<div id="ease" class="transform-box">Easy does it</div>
-	</div>
+	<div id="ease-out" class="transform-box">Easy-out</div>
+	<div id="ease-in-out" class="transform-box">Easy-in-out</div>
+	<div id="linear" class="transform-box">Linear</div>
+	<div id="custom" class="transform-box">Custom</div>
+	<div id="awesome" class="transform-box">Awesome</div>
+	</div> -->
 
+<!-- <div id="ticket">
+	<span class="left"></span>
+	<span class="right"></span>
+	</div> -->
 
+	<img src="ticket.png">
 
 
 
